@@ -1,35 +1,34 @@
 /*
+	pinknoise: pink noise generator for libsyn123
+
+	based on:
 	patest_pink.c
 
 	Generate Pink Noise using Gardner method.
 	Optimization suggested by James McCartney uses a tree
 	to select which random value to replace.
 
-    x x x x x x x x x x x x x x x x 
-     x   x   x   x   x   x   x   x   
-       x       x       x       x       
-           x               x               
-                   x                               
+	    x x x x x x x x x x x x x x x x 
+	     x   x   x   x   x   x   x   x   
+	       x       x       x       x       
+	           x               x               
+	                   x                               
 
-    Tree is generated by counting trailing zeros in an increasing index.
+	Tree is generated by counting trailing zeros in an increasing index.
 	When the index is zero, no random number is selected.
 
-    This program uses the Portable Audio library which is under development.
+	This program uses the Portable Audio library which is under development.
 	For more information see:   http://www.audiomulch.com/portaudio/
 
-    Author: Phil Burk, http://www.softsynth.com
+	Author: Phil Burk, http://www.softsynth.com
 	
 	Revision History:
 
-    Copyleft 1999 Phil Burk - No rights reserved.
+	Copyleft 1999 Phil Burk - No rights reserved.
 */
 
-#include <stdio.h>
+#include "syn123_int.h"
 #include <math.h>
-#include "portaudio.h"
-#ifdef WIN32
-#include <windows.h>
-#endif
 
 /************************************************************/
 /* Calculate pseudo-random 32 bit number based on linear congruential method. */
@@ -54,7 +53,7 @@ typedef struct
 } PinkNoise;
 
 /* Setup PinkNoise structure for N rows of generators. */
-void InitializePinkNoise( PinkNoise *pink, int numRows )
+static void InitializePinkNoise( PinkNoise *pink, int numRows )
 {
 	int i;
 	long pmax;
@@ -68,14 +67,8 @@ void InitializePinkNoise( PinkNoise *pink, int numRows )
 	pink->pink_RunningSum = 0;
 }
 
-#define PINK_MEASURE
-#ifdef PINK_MEASURE
-	float pinkMax = -999.0;
-	float pinkMin =  999.0;
-#endif
-
 /* Generate Pink noise values between -1.0 and +1.0 */
-float GeneratePinkNoise( PinkNoise *pink )
+static float GeneratePinkNoise( PinkNoise *pink )
 {
 	long newRandom;
 	long sum;
@@ -114,135 +107,60 @@ float GeneratePinkNoise( PinkNoise *pink )
 /* Scale to range of -1.0 to 0.9999. */
 	output = pink->pink_Scalar * sum;
 
-#ifdef PINK_MEASURE
-/* Check Min/Max */
-	if( output > pinkMax ) pinkMax = output;
-	else if( output < pinkMin ) pinkMin = output;
-#endif
-
 	return output;
 }
 
-/*******************************************************************/
-#define PINK_TEST
-#ifdef PINK_TEST
-
-/* Context for callback routine. */
-typedef struct {
-	PinkNoise   leftPink;
-	PinkNoise   rightPink;
-    unsigned int sampsToGo;
-}paTestData;
-
-/* This routine will be called by the PortAudio engine when audio is needed.
-** It may called at interrupt level on some machines so don't do anything
-** that could mess up the system like calling malloc() or free().
-*/
-static int patestCallback(	void *inputBuffer, void *outputBuffer,
-                     unsigned long framesPerBuffer,
-                     PaTimestamp outTime, void *userData )
+static void pink_generator(syn123_handle *sh, int samples)
 {
-	int finished;
-	int i;
-	int numFrames;
-	paTestData *data = (paTestData*)userData;
-	float *out = (float*)outputBuffer;
-
-/* Are we almost at end. */
-	if( data->sampsToGo < framesPerBuffer )
-	{
-		numFrames = data->sampsToGo;
-		finished = 1;
-	}
-	else
-	{
-		numFrames = framesPerBuffer;
-		finished = 0;
-	}
-
-	for( i=0; i<numFrames; i++ )
-	{
-		*out++ = GeneratePinkNoise( &data->leftPink );
-		*out++ = GeneratePinkNoise( &data->rightPink );
-	}
-	data->sampsToGo -= numFrames;
-
-	return finished;
+	for(int i=0; i<samples; ++i)
+		sh->workbuf[1][i] = GeneratePinkNoise((PinkNoise*)sh->handle);
 }
 
-/*******************************************************************/
-void main(void);
-void main(void)
+int attribute_align_arg
+syn123_setup_pink(syn123_handle *sh, int rows, size_t *period)
 {
-	PortAudioStream *stream;
-	PaError err;
-	paTestData data;
-	int totalSamps;
-
-/* Initialize two pink noise signals with different numbers of rows. */
-	InitializePinkNoise( &data.leftPink, 12 );
-	InitializePinkNoise( &data.rightPink, 16 );
-
-/* Look at a few values. */
+	int ret = SYN123_OK;
+	if(!sh)
+		return SYN123_BAD_HANDLE;
+	syn123_setup_silence(sh);
+	if(rows < 1)
+		rows = 22;
+	if(rows > PINK_MAX_RANDOM_ROWS)
+		rows = PINK_MAX_RANDOM_ROWS;
+	PinkNoise *handle = malloc(sizeof(PinkNoise));
+	if(!handle)
+		return SYN123_DOOM;
+	InitializePinkNoise(handle, rows);
+	sh->handle = handle;
+	sh->generator = pink_generator;
+	if(sh->maxbuf)
 	{
-		int i;
-		float pink;
-		for( i=0; i<20; i++ )
+		size_t samplesize = MPG123_SAMPLESIZE(sh->fmt.encoding);
+		size_t buffer_samples = sh->maxbuf/samplesize;
+		grow_buf(sh, buffer_samples*samplesize);
+		if(buffer_samples > sh->bufs/samplesize)
 		{
-			pink = GeneratePinkNoise( &data.leftPink );
-			printf("Pink = %f\n", pink );
+			ret = SYN123_DOOM;
+			goto setup_pink_end;
 		}
+		int outchannels = sh->fmt.channels;
+		sh->fmt.channels = 1;
+		size_t buffer_bytes = syn123_read(sh, sh->buf, buffer_samples*samplesize);
+		sh->fmt.channels = outchannels;
+		InitializePinkNoise(handle, rows);
+		if(buffer_bytes != buffer_samples*samplesize)
+		{
+			ret = SYN123_WEIRD;
+			goto setup_pink_end;
+		}
+		sh->samples = buffer_samples;
 	}
 
-	data.sampsToGo = totalSamps = 8*44100; /* Play for a few seconds. */
-
-/* Open a stereo PortAudio stream so we can hear the result. */
-	err = Pa_OpenStream(
-				&stream,
-				0,   			/* default input device */
-				0,              /* no input */
-				paFloat32,		/* 32 bit floating point input */
-				NULL,
-				0, 				/* default output device */
-				2,		        /* stereo output */
-				paFloat32,      /* 32 bit floating point output */
-				NULL,
-				44100.,
-				2048,           /* 46 msec buffers */
-				0,              /* number of buffers, if zero then use default minimum */
-				paClipOff,      /* we won't output out of range samples so don't bother clipping them */
-				patestCallback,
-				&data );
-    if( err != paNoErr ) goto error;
-
-/* Start stream then wait for it to finish. */
-	if( stream )
-	{
-		err = Pa_StartStream( stream );
-		if( err != paNoErr ) goto error;
-
-		printf("Waiting for sound to finish.\n");
-		while( Pa_StreamActive( stream ) )
-		{
-#ifdef WIN32
-			Sleep(100); /* SPIN! */
-#endif
-		}
-
-		err = Pa_CloseStream( stream );
-		if( err != paNoErr ) goto error;
-	}
-
-#ifdef PINK_MEASURE
-	printf("Pink min = %f, max = %f\n", pinkMin, pinkMax );
-#endif
-
-	return;
-
-error:
-	fprintf( stderr, "An error occured while opening the portaudio stream\n" ); 
-	fprintf( stderr, "Error number: %d\n", err );
-	fprintf( stderr, "Error message: %s\n", Pa_GetErrorText( err ) );
+setup_pink_end:
+	if(ret != SYN123_OK)
+		syn123_setup_silence(sh);
+	if(period)
+		*period = sh->samples;
+	return ret;
 }
-#endif /* PINK_TEST */
 
